# steambot

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
alembic/versions/: b3c4d5e6f7a8_add_mlb_player_games.py  b9c0d1e2f3a4_add_game_results.py  c0d1e2f3a4b5_add_runs_table.py  c4e5f6a7b8d9_add_api_key_hash.py  c7d8e9f0a1b2_add_nfl_player_game_context.py  d1e2f3a4b5c6_add_steam_candidates.py  d2e3f4a5b6c7_add_nhl_player_games.py  d5f6a7b8c9e0_add_sim_probability.py  e2f3a4b5c6d7_add_player_games.py  e6a7b8c9d0f1_add_line_snapshots.py  f3a4b5c6d7e8_candidate_source.py
src/fairline/: __main__.py  graph.py  matchup.py  mlb_stats.py  nba_matchup.py  nhl_matchup.py  runs.py  sim.py  state.py  steam.py  trends.py
src/fairline/agents/: pick.py  signal.py
src/fairline/api/: main.py  pages.py  routes.py
src/fairline/clients/: mlb_schedule_client.py  nba_stats_client.py  odds_api.py
src/fairline/db/: models.py
src/sharpline/: graph.py  state.py
src/sharpline/agents/: odds.py  pick.py  validate.py
src/steambot/: __main__.py  clv.py  graph.py  state.py  steam.py
src/steambot/agents/: odds.py  pick.py  validate.py
src/steambot/api/: auth.py  main.py  routes.py
tests/: test_cli_nba.py  test_cli_nhl.py  test_clv.py  test_graph.py  test_matchup.py  test_mlb_stats.py  test_nba_matchup.py  test_nhl_matchup.py  test_sim.py  test_state.py  test_steam.py  test_trends.py
tests/agents/: test_odds.py  test_pick.py  test_signal.py
tests/api/: test_auth.py  test_pages.py  test_routes_authz.py  test_runs_store.py
tests/clients/: test_mlb_schedule_client.py  test_nba_roster_client.py  test_nba_stats_client.py  test_odds_api.py
tests/db/: test_mlb_player_game_model.py  test_nhl_player_game_model.py  test_player_game_context_columns.py
(+9 files in other folders)
