[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "steambot"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=0.3,<0.5",
    "langsmith>=0.2",
    "anthropic>=0.90",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "httpx>=0.28",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.2",
    "alembic>=1.14",
    "stripe>=11.0",
    "jinja2>=3.1",
    "python-multipart>=0.0.20",
    "rolling-cost-cap>=0.1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.24", "respx>=0.23", "httpx"]

[tool.hatch.build.targets.wheel]
packages = ["src/steambot"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = ["integration: requires live API keys"]
